--- a/index.html
+++ b/index.html
@@ -50,9 +50,18 @@
             >Elizabeth Williams</a
           >
           and is
-          <a href="https://github.com/NanaAba08" target="_blank"> on GitHub</a>
+          <a
+            href="https://github.com/NanaAba08/my-awesome-project/tree/main"
+            target="_blank"
+          >
+            on GitHub</a
+          >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a
+            href="https://amazing-cheesecake-b67b19.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
