--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city.."
             required
-            class="search-input"
+            id="search-form-input"
+            class="search-form-input"
           />
-          <input type="submit" value="Search" class="search-button" />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
       <main>
@@ -45,6 +46,7 @@
           </div>
         </div>
       </main>
+
       <footer>
         <p>
           This project was coded by
